Routine design completed

--- a/ots/main/templates/main/routine.html
+++ b/ots/main/templates/main/routine.html
@@ -74,15 +74,13 @@
             <td align="center" height="50">
                 <b>Nursery</b>
             </td>
-            <td align="center"
-                height="50"><input type="text" placeholder="Subject..">
-            </td>
-                        <td align="center" height="50"><input type="text" name="p1" placeholder="Subject.."></td>
+            <td align="center" height="50"><input type="text" name="n1" placeholder="Subject.."></td>
             <td align="center" height="50"><input type="text" name="n2" placeholder="Subject.."></td>
             <td align="center" height="50"><input type="text" name="n3" placeholder="Subject.."></td>
             <td align="center" height="50"><input type="text" name="n4" placeholder="Subject.."></td>
             <td align="center" height="50"><input type="text" name="n5" placeholder="Subject.."></td>
             <td align="center" height="50"><input type="text" name="n6" placeholder="Subject.."></td>
+            <td align="center" height="50"><input type="text" name="n7" placeholder="Subject.."></td>
         </tr>
         <tr>
             <td align="center" height="50">
