school name added to routine

--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -83,7 +83,7 @@
 								</li>
 								<li class="menu-parent">Routine & Admit
 									<ul class="sub-menu">
-										<li><a href="#">Routine</a></li>
+										<li><a href="{% url 'articles:routine' %}">Routine</a></li>
 										<li><a href="{% url 'articles:admitCard' %}">Admit Card</a></li>
 									</ul>
 								</li>
