--- a/ots/main/templates/main/routinePrint.html
+++ b/ots/main/templates/main/routinePrint.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-    <h1 align="center">Nobodoy Ideal School & College</h1>
+    <h1 align="center">{{ schoolName }}</h1>
     <h2 align="center">TIME TABLE</h2>
     <h2 align="center">Class Play to Ten</h2>
 
