--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -24,19 +24,18 @@
 				<div class="container">
 					<div class="top-header-left">
 						<div class="top-header-block">
-							<a href="mailto:info@tosedu" itemprop="email"><i class="fas fa-envelope"></i> info@tosedu</a>
+							<a href="mailto:tostechllc@gmail.com" itemprop="email"><i class="fas fa-envelope"></i> tostechllc@gmail.com</a>
 						</div>
-						<div class="top-header-block">
-							<a href="tel:+9779813639131" itemprop="telephone"><i class="fas fa-phone"></i> +977 9813639131</a>
+						<div class="top-header-block"><a href="tel:+8801921189005" itemprop="telephone"><i class="fas fa-phone"></i> +8801921189005</a>
 						</div>
 					</div>
 					<div class="top-header-right">
 						<div class="social-block">
 							<ul class="social-list">
-								<li><a href=""><i class="fab fa-viber"></i></a></li>
+
 								<li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
-								<li><a href=""><i class="fab fa-facebook-square"></i></a></li>
-								<li><a href=""><i class="fab fa-facebook-messenger"></i></a></li>
+								<li><a href="https://www.facebook.com/fantosfast/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+								<li><a href="https://www.facebook.com/nabodoyschool/"target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
 								<li><a href=""><i class="fab fa-twitter"></i></a></li>
 								<li><a href=""><i class="fab fa-skype"></i></a></li>
 							</ul>
@@ -61,7 +60,7 @@
 			<div class="main-header">
 				<div class="container">
 					<div class="logo-wrap" itemprop="logo">
-						<img src="/static/images/site-logo.jpg" alt="Logo Image">
+						<img src="/static/images/site-logo.png" alt="Logo Image">
 						<!-- <h1>Education header</h1> -->
 					</div>
 					<div class="nav-wrap">
@@ -87,13 +86,28 @@
 										<li><a href="{% url 'articles:admitCard' %}">Admit Card</a></li>
 									</ul>
 								</li>
-								<li><a href="{% url 'articles:classSugesstionChoser' %}">Lecture Planning</a></li>
+
+
+								<li class="menu-parent">Lecture Planning
+									<ul class="sub-menu">
+										<li><a href="">Class 1</a></li>
+										<li><a href="">Class 2</a></li>
+										<li><a href="">Class 3</a></li>
+										<li><a href="">Class 4</a></li>
+										<li><a href="">Class 5</a></li>
+									</ul>
+								</li>
+
+
+
+
 								<li><a href="">Portal</a></li>
 								<li><a href="">About</a></li>
 								<li><a href="{% url 'articles:user_profile' %}"><img src="/static/images/user.png" width="25" height="27"></a></li>
 								{% if user %}
 
-								<li><img src="/static/images/icons8-coin-25.png"><a href="{% url 'articles:purchasePoint' %}" style="text-decoration: none; font-size: 1.7em;">{{ user.point }}</a></li>
+								<li><img src="/static/images/icons8-coin-25.png"> <a href="{% url 'articles:purchasePoint' %}" style="text-decoration: none;  vertical-align: top;line-height: 0.8;
+								 font-size: 3rem; font-family: Times New Roman ">{{ user.point }}</a> </li>
 								{% endif %}
 							</ul>
 						</nav>
@@ -332,66 +346,7 @@
 			</div>
 		</section>
 		<!-- Latest News CLosed -->
-		<div class="learn-courses">
-			<div class="container">
-				<div class="courses">
-					<div class="owl-one owl-carousel">
-						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-							<div class="img-wrap" itemprop="image"><img src="/static/images/course-pic.jpg" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
-							<div class="box-body" itemprop="description">
-								<p>Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
-								<section itemprop="time">
-									<p><span>Duration:</span> 4 Years</p>
-									<p><span>Class Time:</span> 6am-12am / 11am-5pm</p>
-									<p><span>Fee:</span> 4,00,000</p>
-								</section>
-							</div>
-						</div>
 
-						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-							<div class="img-wrap"  itemprop="image"><img src="/static/images/course-pic.jpg" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
-							<div class="box-body" itemprop="description">
-								<p>Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
-								<section itemprop="time">
-									<p><span>Duration:</span> 4 Years</p>
-									<p><span>Class Time:</span> 6am-12am / 11am-5pm</p>
-									<p><span>Fee:</span> 4,00,000</p>
-								</section>
-							</div>
-						</div>
-
-						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-							<div class="img-wrap"  itemprop="image"><img src="/static/images/course-pic.jpg" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
-							<div class="box-body" itemprop="description">
-								<p>Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
-								<section itemprop="time">
-									<p><span>Duration:</span> 4 Years</p>
-									<p><span>Class Time:</span> 6am-12am / 11am-5pm</p>
-									<p><span>Fee:</span> 4,00,000</p>
-								</section>
-							</div>
-						</div>
-
-						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-							<div class="img-wrap"  itemprop="image"><img src="/static/images/course-pic.jpg" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
-							<div class="box-body" itemprop="description">
-								<p>Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
-								<section itemprop="time">
-									<p><span>Duration:</span> 4 Years</p>
-									<p><span>Class Time:</span> 6am-12am / 11am-5pm</p>
-									<p><span>Fee:</span> 4,00,000</p>
-								</section>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Learn courses End -->
 		<section class="whyUs-section">
 			<div class="container">
 				<div class="featured-points">
