few changes on header

--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -35,7 +35,7 @@
 
 								<li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
 								<li><a href="https://www.facebook.com/fantosfast/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-								<li><a href="https://www.facebook.com/nabodoyschool/"target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
+								<li><a href="https://www.facebook.com/fantosfast/"target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
 								<li><a href=""><i class="fab fa-twitter"></i></a></li>
 								<li><a href=""><i class="fab fa-skype"></i></a></li>
 							</ul>
@@ -102,7 +102,7 @@
 
 
 								<li><a href="">Portal</a></li>
-								<li><a href="">About</a></li>
+							<li><a href="">About</a></li>
 								<li><a href="{% url 'articles:user_profile' %}"><img src="/static/images/user.png" width="25" height="27"></a></li>
 								{% if user %}
 
@@ -125,9 +125,9 @@
 
 		<div class="banner">
 			<div class="owl-four owl-carousel" itemprop="image">
-				<img src="/static/images/banner1.png" alt="Image of Bannner">
-				<img src="/static/images/page-banner2.jpg" alt="Image of Bannner">
-				<img src="/static/images/page-banner3.jpg" alt="Image of Bannner">
+				<img src="/static/images/page-banner.png" alt="Image of Bannner">
+				<img src="/static/images/page-banner2.ppg" alt="Image of Bannner">
+				<img src="/static/images/page-banner3.ppg" alt="Image of Bannner">
 			</div>
 			<div class="container" itemprop="description">
 				<h1>welcome to TosEdu Pro</h1>
