few changes on header slide footer

--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -125,13 +125,13 @@
 
 		<div class="banner">
 			<div class="owl-four owl-carousel" itemprop="image">
-				<img src="/static/images/page-banner.png" alt="Image of Bannner">
-				<img src="/static/images/page-banner2.ppg" alt="Image of Bannner">
-				<img src="/static/images/page-banner3.ppg" alt="Image of Bannner">
+				<img style="opacity: 70%;" src="/static/images/page-banner.png" alt="Image of Bannner">
+				<img src="/static/images/page-banner2.png" alt="Image of Bannner">
+				<img src="/static/images/page-banner3.png" alt="Image of Bannner">
 			</div>
 			<div class="container" itemprop="description">
-				<h1>welcome to TosEdu Pro</h1>
-				<h3>With our advance features you can't imagine...</h3>
+				<h1 style="background: rgba(51, 170, 51, .2">welcome to TosEdu Pro</h1>
+				<h3 style="background: rgba(51, 170, 51, .2">With our advance features you can't imagine...</h3>
 			</div>
 			 <div id="owl-four-nav" class="owl-nav"></div>
 		</div>
@@ -351,7 +351,7 @@
 			<div class="container">
 				<div class="featured-points">
 					<ul>
-						<li><i class="fas fa-book"></i> Make question for any class</li>
+						<li><i class="fas fa-book"></i> Make questions for any class</li>
 						<li><i class="fas fa-money-check-alt"></i>Make Admit Card or Routine</li>
 						<li><i class="fas fa-chalkboard-teacher"></i> Find your lecture planning</li>
 						<li> <i class="fas fa-book"></i> A potal for teahcers</li>
@@ -359,7 +359,8 @@
 				</div>
 				<div class="whyus-wrap">
 					<h1>why us?</h1>
-					<p itemprop="description">Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsumLorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsumLorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsumLorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsumLorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsumLorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
+					<p style=" font-size: 30px;" itemprop="description">For the first time we started a webapp in Bangladesh. Here you can easily make questions for Examination for any classes.
+						You can also make admit card or routine or lecture planning from here. More features coming soon....</p>
 
 					<a href="#" class="read-more-btn">read more</a>
 				</div>
@@ -368,7 +369,7 @@
 		<!-- Closed WhyUs section -->
 		<section class="query-section">
 			<div class="container">
-				<p>Any Queries? Ask us a question at<a href="tel:+9779813639131"><i class="fas fa-phone"></i> +977 9813639131</a></p>
+				<p>Any Queries?  &nbsp;  &nbsp; &nbsp; &nbsp;  Ask us a question at<a href="tel:+8801921189005"><i class="fas fa-phone"></i> +8801921189005</a></p>
 			</div>
 		</section>
 		<!-- End of Query Section -->
@@ -381,8 +382,8 @@
 						</header>
 						<p>TosEdu a great start for our education  institute. It's very easy to use and important for teachers</p>
 
-						<h4><a href="tel:+9779813639131"><i class="fas fa-phone"></i> +977 9813639131</a></h4>
-						<h4><a href="mailto:info@tosedu"><i class="fas fa-envelope"></i> info@tosedu</a></h4>
+						<h4><a href="tel:+8801921189005"><i class="fas fa-phone"></i> +8801921189005</a></h4>
+						<h4><a href="mailto:tostechllc@gmail.com"><i class="fas fa-envelope"></i> tostechllc@gmail.com</a></h4>
 						<h4><a href=""><i class="fas fa-map-marker-alt"></i>Gazipur, Dhaka, Bangladesh</a></h4>
 					</div>
 
@@ -390,20 +391,20 @@
 
 					<div class="box-wrap">
 						<header>
-							<h1>recent courses</h1>
+							<h1>Recent Features</h1>
 						</header>
 						<div class="recent-course-wrap">
-							<img src="/static/images/ui-ux.jpg" alt="Ui/Ux Designing">
+							<img src="/static/images/ui2.png" alt="admit">
 							<a href=""><div class="course-name">
-								<h3>UI/UX Designer courses</h3>
-								<p><span>$50</span> $40</p>
+								<h3>Admit Card</h3>
+								<p><span>🪙10</span> 🪙10</p>
 							</div></a>
 						</div>
 						<div class="recent-course-wrap">
-							<img src="/static/images/ui-ux.jpg" alt="Ui/Ux Designing">
+							<img src="/static/images/ui1.png" alt="rotine">
 							<a href=""><div class="course-name">
-								<h3>UI/UX Designer courses</h3>
-								<p><span>$50</span> $40</p>
+								<h3>Routine</h3>
+								<p><span>🪙15</span> 🪙15</p>
 							</div></a>
 						</div>
 					</div>
@@ -437,7 +438,7 @@
 			</div>
 			<div class="footer-last-section">
 				<div class="container">
-					<p>Copyright 2022 &copy; tosedu.com <span> | </span> Designed and developed by Fahim & Rafsan & Maruf<a href="https://labtheme.com">....</a></p>
+					<p>Copyright 2022 &copy; tosfast.com <span> | </span> Designed and developed by Techrz IT<a href="https://labtheme.com">....</a></p>
 				</div>
 			</div>
 		</footer>
