--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -164,7 +164,7 @@
 
 		 <div class="page-heading">
 			<div class="container">
-				<h2>popular courses</h2>
+				<h2>Our Features</h2>
 			</div>
 		</div>
 
@@ -309,39 +309,30 @@
 				<div class="owl-two owl-carousel">
 					<div class="news-wrap" itemprop="event">
 						<div class="news-img-wrap" itemprop="image">
-							<img src="/static/images/latest-new-img.jpg" alt="Latest News Images">
+							<img src="/static/images/latest2.png" alt="Latest News Images">
 						</div>
 						<div class="news-detail" itemprop="description">
-							<a href=""><h1>Orientation Programme for new Students.</h1></a>
-							<h2 itemprop="startDate">By Admin | 20 Dec. 2018</h2>
+							<a href=""><h1>We added Routine tamplete.</h1></a>
+							<h2 itemprop="startDate">By Admin | 22 Mar. 2022</h2>
 
-							<p>Orientation Programme for new sffs Students. Orientatin Programmes for new Students.. Orientatin Programmes for new Students</p>
+							<p>Recently we add this features to our site. From here you can edit or modify and download your custom Routine..</p>
 						</div>
 					</div>
 
 					<div class="news-wrap" itemprop="event">
 						<div class="news-img-wrap" itemprop="image">
-							<img src="/static/images/latest-new-img.jpg" alt="Latest News Images">
+							<img src="/static/images/latest1.png" alt="Latest News Images">
 						</div>
 						<div class="news-detail" itemprop="description">
-							<a href=""><h1>Orientation Programme for new Students.</h1></a>
-							<h2 itemprop="startDate">By Admin | 20 Dec. 2022</h2>
+							<a href=""><h1>A new Admit Card maker now in our site.</h1></a>
+							<h2 itemprop="startDate">By Admin | 20 February. 2022</h2>
 
-							<p>Orientation Programme for new sffs Students. Orientatin Programmes for new Students.. Orientatin Programmes for new Students</p>
+							<p>We just added this features to our site. From here you can edit or modify and download your custom Admit card..</p>
 						</div>
 					</div>
 
-					<div class="news-wrap" itemprop="event">
-						<div class="news-img-wrap" itemprop="image">
-							<img src="/static/images/latest-new-img.jpg" alt="Latest News Images">
-						</div>
-						<div class="news-detail" itemprop="description">
-							<a href=""><h1>Orientation Programme for new Students.</h1></a>
-							<h2 itemprop="startDate">By Admin | 20 Dec. 2022</h2>
 
-							<p>Orientation Programme for new sffs Students. Orientatin Programmes for new Students.. Orientatin Programmes for new Students</p>
-						</div>
-					</div>
+
 				</div>
 			</div>
 		</section>
