homepage design done

--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -173,54 +173,56 @@
 				<div class="courses">
 					<div class="owl-one owl-carousel">
 						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-							<div class="img-wrap" itemprop="image"><img src="/static/images/course-pic.jpg" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
+							<div class="img-wrap" itemprop="image"><img src="/static/images/feature2.png" alt="courses picture"></div>
+								<a href="#" class="learn-desining-banner" itemprop="name">Question Canvas>>></a>
 							<div class="box-body" itemprop="description">
-								<p>Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
-								<section itemprop="time">
-									<p><span>Duration:</span> 4 Years</p>
-									<p><span>Class Time:</span> 6am-12am / 11am-5pm</p>
-									<p><span>Fee:</span> 4,00,000</p>
-								</section>
+								<p>After added some question from qustion maker, you will find your ready full question here. You can Edit or Print from here.</p>
+
 							</div>
 						</div>
 
 						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-							<div class="img-wrap"  itemprop="image"><img src="/static/images/course-pic.jpg" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
+							<div class="img-wrap"  itemprop="image"><img src="/static/images/feature3.png" alt="courses picture"></div>
+								<a href="#" class="learn-desining-banner" itemprop="name">Lecture Planning >>></a>
 							<div class="box-body" itemprop="description">
-								<p>Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
-								<section itemprop="time">
-									<p><span>Duration:</span> 4 Years</p>
-									<p><span>Class Time:</span> 6am-12am / 11am-5pm</p>
-									<p><span>Fee:</span> 4,00,000</p>
-								</section>
+								<p>For your class you will find here your full lecture planning from here. You can Edit or Print from here. &nbsp; &nbsp; &nbsp; &nbsp;</p>
+
 							</div>
 						</div>
 
 						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-							<div class="img-wrap"  itemprop="image"><img src="/static/images/course-pic.jpg" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
+							<div class="img-wrap"  itemprop="image"><img src="/static/images/latest1.png" alt="courses picture"></div>
+								<a href="#" class="learn-desining-banner" itemprop="name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Routine &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 							<div class="box-body" itemprop="description">
-								<p>Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
-								<section itemprop="time">
-									<p><span>Duration:</span> 4 Years</p>
-									<p><span>Class Time:</span> 6am-12am / 11am-5pm</p>
-									<p><span>Fee:</span> 4,00,000</p>
-								</section>
+								<p>A  full editable Routine for exam ready here.Here you will find some of tamplete.You can Edit or Print from here. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;</p>
+
 							</div>
 						</div>
 
 						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-							<div class="img-wrap"  itemprop="image"><img src="/static/images/course-pic.jpg" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
+							<div class="img-wrap"  itemprop="image"><img src="/static/images/latest2.png" alt="courses picture"></div>
+								<a href="#" class="learn-desining-banner" itemprop="name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Admit Card &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 							<div class="box-body" itemprop="description">
-								<p>Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum Lorem Ipsum lorem ipsum</p>
-								<section itemprop="time">
-									<p><span>Duration:</span> 4 Years</p>
-									<p><span>Class Time:</span> 6am-12am / 11am-5pm</p>
-									<p><span>Fee:</span> 4,00,000</p>
-								</section>
+								<p>A  full editable Admit Card for exam ready here.Here you will find some of tamplete.You can Edit or Print from here. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp</p>
+
+							</div>
+						</div>
+
+						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
+							<div class="img-wrap"  itemprop="image"><img src="/static/images/feature4.png" alt="courses picture"></div>
+								<a href="#" class="learn-desining-banner" itemprop="name">&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Portal&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a>
+							<div class="box-body" itemprop="description">
+								<p>We are working on it. It'll publish soon. Here a lot of features waiting for you.It will very helpfull for teachers and students.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+
+							</div>
+						</div>
+
+						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
+							<div class="img-wrap"  itemprop="image"><img src="/static/images/feature1.png" alt="courses picture"></div>
+								<a href="#" class="learn-desining-banner" itemprop="name">Question Maker >>></a>
+							<div class="box-body" itemprop="description">
+								<p>There lot of tampletes available.For any class you can choose question and add this into canvas for print it.</p>
+
 							</div>
 						</div>
 					</div>
