about page done

--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -72,12 +72,7 @@
 										<li><a href="{% url 'articles:canvas' %}">Question Canvas</a></li>
 										<li><a href="{% url 'articles:lessThanSix' %}">Class Less than Six</a></li>
 										<li><a href="{% url 'articles:englishQuestions' %}">English Question</a></li>
-										<li class="menu-parent">Child
-											<ul class="sub-menu">
-												<li><a href="">Grand-child</a></li>
-												<li><a href="">Grand-child</a></li>
-											</ul>
-										</li>
+
 									</ul>
 								</li>
 								<li class="menu-parent">Routine & Admit
@@ -390,14 +385,14 @@
 							<img src="/static/images/ui2.png" alt="admit">
 							<a href=""><div class="course-name">
 								<h3>Admit Card</h3>
-								<p><span>🪙10</span> 🪙10</p>
+								<p><span>🪙05</span> 🪙01</p>
 							</div></a>
 						</div>
 						<div class="recent-course-wrap">
 							<img src="/static/images/ui1.png" alt="rotine">
 							<a href=""><div class="course-name">
 								<h3>Routine</h3>
-								<p><span>🪙15</span> 🪙15</p>
+								<p><span>🪙15</span> 🪙10</p>
 							</div></a>
 						</div>
 					</div>
@@ -420,7 +415,7 @@
 				<div class="container">
 					<hr class="footer-line">
 					<ul class="social-list">
-						<li><a href=""><i class="fab fa-facebook-square"></i></a></li>
+						<li><a href="https://www.facebook.com/nabodoyschool/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
 						<li><a href=""><i class="fab fa-twitter"></i></a></li>
 						<li><a href=""><i class="fab fa-skype"></i></a></li>
 						<li><a href=""><i class="fab fa-youtube"></i></a></li>
@@ -431,7 +426,7 @@
 			</div>
 			<div class="footer-last-section">
 				<div class="container">
-					<p>Copyright 2022 &copy; tosfast.com <span> | </span> Designed and developed by Techrz IT<a href="https://labtheme.com">....</a></p>
+					<p>Copyright 2022 &copy; tosfast.com <span> | </span> Designed and developed by Tosfast IT<a href="https://labtheme.com">....</a></p>
 				</div>
 			</div>
 		</footer>
