class suggestion chooser fix 1

--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -85,7 +85,7 @@
 
 								<li class="menu-parent">Lecture Planning
 									<ul class="sub-menu">
-										<li><a href="">Class 1</a></li>
+										<li><a href="{% url 'articles:classsuggession' %}">Class 1</a></li>
 										<li><a href="">Class 2</a></li>
 										<li><a href="">Class 3</a></li>
 										<li><a href="">Class 4</a></li>
