--- a/ots/main/templates/main/Canvas.html
+++ b/ots/main/templates/main/Canvas.html
@@ -192,7 +192,7 @@
 <a href="{% url 'articles:classAndSubjects' %}">Add a question</a>
 
 	<div align="center">
-		<button class="button"> <a href="">Print Question</a>
+		<button class="button"> <a href="{% url 'articles:questionsGenerate' %}">Print Question</a>
 		</button>
 	</div>
 </div>
