--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -85,11 +85,11 @@
 
 								<li class="menu-parent">Lecture Planning
 									<ul class="sub-menu">
-										<li><a href="{% url 'articles:classsuggession' %}">Class 1</a></li>
-										<li><a href="">Class 2</a></li>
-										<li><a href="">Class 3</a></li>
-										<li><a href="">Class 4</a></li>
-										<li><a href="">Class 5</a></li>
+										<li><a href="{% url 'articles:classsuggession' 1 %}">Class 1</a></li>
+										<li><a href="{% url 'articles:classsuggession' 2 %}">Class 2</a></li>
+										<li><a href="{% url 'articles:classsuggession' 3 %}">Class 3</a></li>
+										<li><a href="{% url 'articles:classsuggession' 5 %}">Class 4</a></li>
+										<li><a href="{% url 'articles:classsuggession' 5 %}">Class 5</a></li>
 									</ul>
 								</li>
 
