--- a/ots/main/templates/main/about.html
+++ b/ots/main/templates/main/about.html
@@ -85,11 +85,11 @@
 
 								<li class="menu-parent">Lecture Planning
 									<ul class="sub-menu">
-										<li><a href="">Class 1</a></li>
-										<li><a href="">Class 2</a></li>
-										<li><a href="">Class 3</a></li>
-										<li><a href="">Class 4</a></li>
-										<li><a href="">Class 5</a></li>
+										<li><a href="{% url 'articles:classsuggession' 1 %}">Class 1</a></li>
+										<li><a href="{% url 'articles:classsuggession' 2 %}">Class 2</a></li>
+										<li><a href="{% url 'articles:classsuggession' 3 %}">Class 3</a></li>
+										<li><a href="{% url 'articles:classsuggession' 5 %}">Class 4</a></li>
+										<li><a href="{% url 'articles:classsuggession' 5 %}">Class 5</a></li>
 									</ul>
 								</li>
 
@@ -97,7 +97,7 @@
 
 
 								<li><a href="">Portal</a></li>
-							<li><a href="">About</a></li>
+							<li><a href="{% url 'articles:about' %}">About</a></li>
 								<li><a href="{% url 'articles:user_profile' %}"><img src="/static/images/user.png" width="25" height="27"></a></li>
 								{% if user %}
 
