--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -169,7 +169,7 @@
 					<div class="owl-one owl-carousel">
 						<div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
 							<div class="img-wrap" itemprop="image"><img src="/static/images/feature2.png" alt="courses picture"></div>
-								<a href="#" class="learn-desining-banner" itemprop="name">Question Canvas>>></a>
+								<a href="{% url 'articles:canvas' %}" class="learn-desining-banner" itemprop="name">Question Canvas>>></a>
 							<div class="box-body" itemprop="description">
 								<p>After added some question from qustion maker, you will find your ready full question here. You can Edit or Print from here.</p>
 
