--- a/ots/main/templates/main/about.html
+++ b/ots/main/templates/main/about.html
@@ -143,7 +143,7 @@
 				<h2 class="top-heading">meet our team</h2>
 				<article class="top-heading">
 				        <div class="developer-wrap">
-						<img src="images/pp.jpg" alt="developer images">
+						<img src="/static/images/pp.jpg" alt="developer images">
 						<h3>Rifat Mahmud</h3>
 						<p>Teacher</p>
 
